--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,26 @@ repositories {
 }
 
 dependencies {
+	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Spring web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// MySQL
 	implementation 'mysql:mysql-connector-java:8.0.33'
+	// json
+	implementation 'org.json:json:20231013'
+	// validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// JWT
+	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
