--- a/build.gradle
+++ b/build.gradle
@@ -22,18 +22,22 @@ repositories {
 }
 
 dependencies {
-	// JPA
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// Spring web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	// Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	// MySQL
-	implementation 'mysql:mysql-connector-java:8.0.33'
+	// Security / Thymeleaf
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	// json
 	implementation 'org.json:json:20231013'
 	// validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// MySQL
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	// JWT
 	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
